[package]
authors = ["JC97 <jc97@icloud.com>"]
edition = "2021"
name    = "mac-open-with-napi"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
core-foundation = "0.6.4"
launch-services = "0.0.2"
napi        = { version = "2", features = [] }
napi-derive = "2"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
